Actualización 01 del Primer Commit

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,14 @@
     <title>Aprendiendo GIT</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Acerca de mi</h1>
+    </header>
+    <main>
+        <h2>Mis Primeros años</h2>
+        <article>
+            Nací en Arequipa - Perú
+        </article>
+    </main>
 </body>
 </html>
