Agregado de comentarios a Cod.js y Index.html

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,10 @@
     <main>
         <h2>Mis Primeros años</h2>
         <article>
-            Nací en Arequipa - Perú
+           <!--Descripción inicial - corta-->
+           <p>Nací en Arequipa - Perú, Estudié en Tacna, me case y tengo una bb muy amorosa y hermosa</p>
+           <p>Me preparé para biomèdicas, y terminé estudiando ingeniería de Sistemas</p>
+           <!--Descripción inicial-->
         </article>
     </main>
 </body>
