Fix, Corrección en Html

--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,9 @@
     <main>
         <h2>Mis Primeros años</h2>
         <article>
-           <!--Descripción inicial - corta-->
-           <p>Nací en Arequipa - Perú, Estudié en Tacna, me case y tengo una bb muy amorosa y hermosa</p>
-           <p>Me preparé para biomèdicas, y terminé estudiando ingeniería de Sistemas</p>
-           <!--Descripción inicial-->
+            <p>Nací en Arequipa - Perú, estudié y me casé en Tacna, producto de ello, tengo una hermosa hija, a la que amo con toda mi alma</p>
+            <p>Ingresé a la Universidad para enfermería, pero me gustaba mas la tecnología, por ello terminé como Ing. de Sistemas en Tacna</p>
+            <!-- Ingresando algun comentario-->
         </article>
     </main>
 </body>
