update, se agregó más información

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,8 @@
             <p>Nací en Arequipa - Perú, estudié y me casé en Tacna, producto de ello, tengo una hermosa hija, a la que amo con toda mi alma</p>
             <p>Ingresé a la Universidad para enfermería, pero me gustaba mas la tecnología, por ello terminé como Ing. de Sistemas en Tacna</p>
             <!-- Ingresando algun comentario-->
+            <p>Se esta haciendo un nuevo cambio para revisar el nuevo HEAD en la terminal de GIT</p>
+            <!--Ingresando nueva información-->
         </article>
     </main>
 </body>
